# questionierBot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  ingest_vectors.py  pyproject.toml  requirements.txt  server.py
.history/: .env_20251111171210  README_20251109155220.md  README_20251109163754.md  README_20251111021014.md  README_20251111170954.md  README_20251112153257.md  README_20251117225148.md  ingest_vectors_20251111003302.py  pyproject_20251105234827.toml  pyproject_20251109165814.toml  requirements_20251105234604.txt  requirements_20251105234642.txt  requirements_20251111003433.txt
.history/data/: crm_donor_semantics_20251109172659.yaml
.history/scripts/: build_vectors_20251111012926.py  build_vectors_20251111013235.py  build_vectors_20251111015216.py  query_vectors_20251111012954.py  query_vectors_20251111021409.py  query_vectors_20251111021550.py  query_vectors_20251111021635.py  query_vectors_20251111021700.py  query_vectors_20251111021754.py
.history/src/: splitter_20251111165622.py  splitter_20251111171124.py  splitter_20251111172019.py  splitter_20251111173830.py  splitter_20251111173837.py  splitter_20251111175318.py  splitter_20251111180415.py
data/: crm_donor_semantics.yaml
faiss_store/: metadata.pkl
metadata/: crm_donor_data.yaml
notebook/: document.ipynb
src/: splitter.py
src/ingestdata/: ingest_pipeline.py
src/metadata/: crm_donor_data.yaml
src/qapipeline/: __init__.py  compiler.py  llm_common.py  models.py  orchestrator.py  settings.py  splitter.py  test.py  validator.py
(+35 files in other folders)
